--- a/notebook/test_env.ipynb
+++ b/notebook/test_env.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -14,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -24,37 +33,13 @@
     "sys.path.append('../')\n",
     "import numpy as np\n",
     "from nips.environment.environment import TestEnvironment\n",
-    "from explauto.environment.context_environment import ContextEnvironment\n"
+    "\n",
+    "environment = TestEnvironment()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "env_cls = TestEnvironment\n",
-    "\n",
-    "env_conf = dict(m_mins=[-1.]*32, \n",
-    "                m_maxs=[1.]*32, \n",
-    "                s_mins=[-1.]*110, \n",
-    "                s_maxs=[1.]*110)\n",
-    "\n",
-    "\n",
-    "context_mode = dict(mode='mcs',\n",
-    "                    context_n_dims=2,\n",
-    "                    context_sensory_bounds=[[-1., -1.],[1., 1.]])\n",
-    "\n",
-    "\n",
-    "environment = ContextEnvironment(env_cls, env_conf, context_mode)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -63,53 +48,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "m_dyn [[-0.07734496  0.11632151 -0.15093901 -0.16655548]\n",
-      " [-0.12801221  0.20856645 -0.24041665 -0.29967436]\n",
-      " [-0.02080669  0.29941217 -0.03008501 -0.52885359]\n",
-      " [ 0.08699821  0.37461741  0.18757839 -0.72639076]\n",
-      " [ 0.15310702  0.42810872  0.33369612 -0.85921004]\n",
-      " [ 0.09508692  0.34886882  0.27739608 -0.77520099]\n",
-      " [-0.02471604  0.20891492  0.11900648 -0.58504581]\n",
-      " [-0.12167348  0.11042992 -0.00768062 -0.44138597]\n",
-      " [-0.21087364  0.04556089 -0.18496603 -0.3401132 ]\n",
-      " [-0.30425354  0.0048975  -0.46464772 -0.27242554]\n",
-      " [-0.37725162 -0.01645271 -0.67599981 -0.22662308]\n",
-      " [-0.40963992 -0.026724   -0.7524613  -0.22085315]\n",
-      " [-0.34065355 -0.03872672 -0.5107287  -0.31850289]\n",
-      " [-0.27756855 -0.04100588 -0.28039318 -0.4092688 ]\n",
-      " [-0.26094265 -0.02613174 -0.1417903  -0.47874824]\n",
-      " [-0.43425447  0.05077457 -0.25375894 -0.54779201]\n",
-      " [-0.6396293   0.13855668 -0.4255808  -0.60484594]\n",
-      " [-0.79535901  0.20851645 -0.55486873 -0.64608168]\n",
-      " [-0.91964432  0.24546494 -0.64036645 -0.68505741]\n",
-      " [-1.          0.25994678 -0.69363703 -0.72096294]\n",
-      " [-1.          0.27400208 -0.728346   -0.74528399]\n",
-      " [-1.          0.28944917 -0.74994436 -0.75997825]\n",
-      " [-1.          0.30588615 -0.76193359 -0.76751363]\n",
-      " [-1.          0.32288474 -0.7668887  -0.76981174]\n",
-      " [-1.          0.34011925 -0.76673019 -0.76831517]]\n",
-      "current_context [ 3.41601171 -1.66799304]\n",
-      "s_hand [-0.07734496 -0.12801221 -0.02080669  0.08699821  0.15310702  0.09508692\n",
-      " -0.02471604 -0.12167348 -0.21087364 -0.30425354 -0.37725162 -0.40963992\n",
-      " -0.34065355 -0.27756855 -0.26094265 -0.43425447 -0.6396293  -0.79535901\n",
-      " -0.91964432 -1.         -1.         -1.         -1.         -1.         -1.\n",
-      "  0.11632151  0.20856645  0.29941217  0.37461741  0.42810872]\n",
-      "s_joystick [ 0.29990666  0.2816277   0.31984686  0.36456676  0.41404968  0.52934139\n",
-      "  0.61491326  0.67368553  0.70877068  0.69574646  0.62274838  0.59036008\n",
-      "  0.65934645  0.72243145  0.73905735 -0.55057598 -0.84819575 -1.09477118\n",
-      " -1.29426173 -1.42810872]\n",
-      "s_ergo [ 3.11610505  3.13438401  3.09616485  3.05144495  3.00196203  2.88667032\n",
-      "  2.80109845  2.74232618  2.70724103  2.72026525  2.79326333  2.82565163\n",
-      "  2.75666526  2.69358026  2.67695436  3.96658769  4.26420746  4.51078288\n",
-      "  4.71027344  4.84412043]\n",
-      "s_ball [-4.78409809 -4.80237705 -4.76415789 -4.719438   -4.66995508 -4.55466336\n",
-      " -4.46909149 -4.41031923 -4.37523408 -4.3882583  -4.46125637 -4.49364467\n",
-      " -4.4246583  -4.3615733  -4.34494741 -5.63458074 -5.9322005  -6.17877593\n",
-      " -6.37826648 -6.51211348]\n",
-      "s_light [-0.32284172 -0.30873238 -0.33949959 -0.35786469 -0.32500767  1.07991737\n",
-      "  1.46310901  1.7684567   2.00303241  2.12385518]\n",
-      "s_sound [-0.30290152 -0.22579332 -0.24529678 -0.19309006 -0.12414408  1.22426151\n",
-      "  1.55696642  1.79051763  1.91701011  2.01846881]\n"
+      "current_context [ 0.  0.]\n",
+      "s_hand [  3.12555863e-02   4.49647423e-02   5.34968180e-04  -4.85826813e-02\n",
+      "  -9.10963923e-02  -1.87215575e-01  -3.03686802e-01  -3.92500245e-01\n",
+      "  -5.00943989e-01  -6.58555171e-01  -7.75071996e-01  -7.93949601e-01\n",
+      "  -5.55961925e-01  -3.36427463e-01  -1.83531671e-01  -1.22351166e-01\n",
+      "  -1.01619632e-01  -9.38994206e-02  -1.14791855e-01  -1.53922660e-01\n",
+      "  -1.87485026e-01  -2.14584804e-01  -2.36596734e-01  -2.54710021e-01\n",
+      "  -2.69833385e-01  -3.20579156e-01  -5.10990567e-01  -2.17531192e-01\n",
+      "   1.06764401e-01   3.43712795e-01]\n",
+      "s_joystick [ 0.80632758  0.83891434  0.55649689  0.28784478  0.09243528 -0.06486441\n",
+      " -0.20206717 -0.29860082 -0.38615213 -0.50463251 -0.58758697 -0.5793648\n",
+      " -0.31936519 -0.08171744  0.08630171  0.19822799  0.40937094  0.12363177\n",
+      " -0.22155626 -0.49763545]\n",
+      "s_ergo [-0.80632758 -0.83891434 -0.55649689 -0.28784478 -0.09243528  0.06486441\n",
+      "  0.20206717  0.29860082  0.38615213  0.50463251  0.58758697  0.5793648\n",
+      "  0.31936519  0.08171744 -0.08630171 -0.19822799 -0.40937094 -0.12363177\n",
+      "  0.22155626  0.49763545]\n",
+      "s_ball [ 0.80632758  0.83891434  0.55649689  0.28784478  0.09243528 -0.06486441\n",
+      " -0.20206717 -0.29860082 -0.38615213 -0.50463251 -0.58758697 -0.5793648\n",
+      " -0.31936519 -0.08171744  0.08630171  0.19822799  0.40937094  0.12363177\n",
+      " -0.22155626 -0.49763545]\n",
+      "s_light [ 1.39391455  1.41827914  0.87586208  0.36956222  0.00613356 -0.2630924\n",
+      " -0.61143811 -0.4222326  -0.16459588 -0.00699706]\n",
+      "s_sound [ 1.14408386  0.86720958  0.41180047  0.01685303 -0.28836888 -0.49682882\n",
+      " -0.79552307 -0.62826428 -0.36603071 -0.08172934]\n"
      ]
     }
    ],
@@ -137,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -145,10 +108,10 @@
     {
      "data": {
       "text/plain": [
-       "[4.8441204326546075, -6.5121134767486293]"
+       "[0.49763545445173341, -0.49763545445173341]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,6 +119,15 @@
    "source": [
     "environment.get_current_context()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
